enable CORS preflights
